--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ body {
 .search__filters__element--item {
     display: flex;
     align-items:center;
-    border: 1px solid grey;
+    border: 1px solid #d6d6d6;
     border-radius: 1.5rem;
     margin: .5rem;
 }
@@ -247,6 +247,7 @@ body {
     background-color: white;
     overflow: hidden;
     width: 100%;
+    min-width: 215px;
     max-height: 150px;
     padding: .3rem;
     box-shadow: .2rem .2rem .5rem #d6d6d6;
@@ -276,6 +277,12 @@ body {
     padding-bottom: 3rem;
 }
 
+@media (max-width: 380px) {
+    .populaire__card--description>p {
+        padding-bottom: 0;
+    }
+}
+
 .etoiles {
     display: flex;
     list-style: none;
@@ -297,12 +304,40 @@ body {
     row-gap: 1rem;
 }
 
-.h__cards--item {
+.h__cards {
     display: flex;
     flex-direction: column;
-    border-radius: 0.5rem;
+    row-gap: 1rem;
+}
+
+.h__cards__item {
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 1rem;
     background-color: white;
     overflow: hidden;
     width: 100%;
     padding: .3rem;
+    box-shadow: .2rem .2rem .5rem #d6d6d6;
+}
+
+.h__cards__item--img {
+    width: 100%;
+    height: 70%;
+    overflow: hidden;
+}
+
+.h__cards__item--img>img {
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem 1rem 0 0;
+    object-fit: cover;
+}
+
+.h__cards__description {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 30%;
+    padding: .25rem 1rem;
 }
