--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@
 /* 
 INDEX 
 
-1 - Header : 37
+1 - Header : ..........42
+1.1 - Navbar: .........51
+1.2 - Search: .........104
+1.3 - Filtres: ........174
+2 - Aside: ............234
+3 - Hébergements: .....303
 
 */
 
@@ -248,7 +253,7 @@ body {
     overflow: hidden;
     width: 100%;
     min-width: 215px;
-    max-height: 150px;
+    height: 150px;
     padding: .3rem;
     box-shadow: .2rem .2rem .5rem #d6d6d6;
 }
@@ -275,11 +280,12 @@ body {
 
 .populaire__card--description>p {
     padding-bottom: 3rem;
+    font-size: .9rem;
 }
 
 @media (max-width: 380px) {
     .populaire__card--description>p {
-        padding-bottom: 0;
+        padding-bottom: 1rem;
     }
 }
 
@@ -307,6 +313,7 @@ body {
 .h__cards {
     display: flex;
     flex-direction: column;
+    align-items: center;
     row-gap: 1rem;
 }
 
@@ -317,6 +324,8 @@ body {
     background-color: white;
     overflow: hidden;
     width: 100%;
+    max-height: 275px;
+    max-width: 400px;
     padding: .3rem;
     box-shadow: .2rem .2rem .5rem #d6d6d6;
 }
@@ -324,6 +333,7 @@ body {
 .h__cards__item--img {
     width: 100%;
     height: 70%;
+    max-height: 125px;
     overflow: hidden;
 }
 
@@ -331,7 +341,7 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 1rem 1rem 0 0;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .h__cards__description {
@@ -340,4 +350,12 @@ body {
     width: 100%;
     height: 30%;
     padding: .25rem 1rem;
+}
+
+.h__cards__description>h4 {
+    padding-bottom: .25rem;
+}
+
+.h__cards__description>p {
+    padding-bottom: .25rem;
 }
