--- a/style.css
+++ b/style.css
@@ -147,6 +147,9 @@ body {
     width: 70%;
     border-top: 1px solid var(--bg-color);
     border-bottom: 1px solid var(--bg-color);
+    font-weight: bold;
+    color: black;
+    padding-left: 1rem;;
 }
 .search__box--btn {
     border-radius: 1rem;
@@ -307,7 +310,7 @@ body {
     display: flex;
     flex-direction: column;
     padding: 2rem 1.5rem;
-    row-gap: 1rem;
+    row-gap: 2rem;
 }
 
 .h__cards {
@@ -359,3 +362,68 @@ body {
 .h__cards__description>p {
     padding-bottom: .25rem;
 }
+
+
+/* Section activités */
+.activites {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 1.5rem;
+    row-gap: 2rem;
+}
+
+.activites__bloc {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1rem;
+}
+.activites__bloc--card {
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 1rem;
+    background-color: white;
+    overflow: hidden;
+    width: 100%;
+    max-height: 275px;
+    max-width: 400px;
+    
+    box-shadow: .2rem .2rem .5rem #d6d6d6;
+}
+
+.activites__bloc--card--img {
+    width: 100%;
+    height: 70%;
+    max-height: 125px;
+    overflow: hidden;
+}
+
+.activites__bloc--card--img>img {
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem 1rem 0 0;
+    object-fit: contain;
+}
+.activites__bloc--card>h3 {
+    margin: 1rem;
+}
+
+/* Footer */ 
+.footer {
+    background-color: var(--bg-color);
+    padding: 2rem 1rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+}
+
+.footer__bloc--titre {
+    padding: 1rem;
+}
+.footer__bloc--liste {
+    list-style: none;
+}
+.footer__bloc--liste>li {
+    padding: .5rem;
+}
+
