--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ INDEX
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
@@ -74,6 +79,7 @@ body {
      text-align: right;
      color: var(--primary-color);
      font-weight: 800;
+     cursor:pointer;
  }
 
  .navbar__nav {
@@ -91,18 +97,20 @@ body {
      display: flex;
      justify-content: center;
      align-items: center;
+     transition: all ease .3s;
      
  }
 
  .navbar__nav--link>a {
      text-decoration: none;
      color: black;
+     transition: all ease .3s;
  }
 
- .navbar__nav--link.active {
+ .navbar__nav--link:hover {
     border-bottom: 3px solid var(--primary-color);
  }
- .navbar__nav--link.active>a {
+ .navbar__nav--link:hover>a {
      color: var(--primary-color);
  }
 
@@ -112,12 +120,13 @@ body {
  }
 
  .search--titre {
-    padding: 1rem 0 .5rem 0;
+    padding: 1rem 0 .5rem .5rem;
     font-size: 1.3rem;
  }
 
  .search--sous-titre {
      margin: .5rem 0;
+     padding-left: .5rem;
  }
 
  .search__box {
@@ -125,6 +134,7 @@ body {
      justify-content: center;
      width: 100%;
      height: 3rem;
+     margin: 1rem 0;
  }
 .search__box--icon {
     display: flex;
@@ -149,8 +159,14 @@ body {
     border-bottom: 1px solid var(--bg-color);
     font-weight: bold;
     color: black;
-    padding-left: 1rem;;
+    padding-left: 1rem;
+    transition: all ease .3s;
 }
+.search__box--input:focus {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
 .search__box--btn {
     border-radius: 1rem;
     background-color: var(--primary-color);
@@ -160,6 +176,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .search__box--btn>span {
@@ -182,6 +199,10 @@ body {
     display: flex;
     flex-direction: column;
 }
+.search__filters>h3 {
+    margin: .5rem;
+}
+
 .search__filters__element {
     display: flex;
     flex-wrap: wrap;
@@ -279,11 +300,13 @@ body {
 }
 .populaire__card--description>h4 {
     margin-bottom: .25rem;
+    color: black;
 }
 
 .populaire__card--description>p {
     padding-bottom: 3rem;
     font-size: .9rem;
+    color: black;
 }
 
 @media (max-width: 380px) {
@@ -357,12 +380,17 @@ body {
 
 .h__cards__description>h4 {
     padding-bottom: .25rem;
+    color: black;
 }
 
 .h__cards__description>p {
     padding-bottom: .25rem;
+    color: black;
 }
 
+.h__plus {
+    cursor: pointer;
+}
 
 /* Section activités */
 .activites {
@@ -406,6 +434,7 @@ body {
 }
 .activites__bloc--card>h3 {
     margin: 1rem;
+    color: black;
 }
 
 /* Footer */ 
@@ -416,14 +445,17 @@ body {
     flex-direction: column;
     row-gap: 1.5rem;
 }
-
+.footer__bloc {
+    padding: .5rem;
+}
 .footer__bloc--titre {
-    padding: 1rem;
+    padding: .5rem;
 }
 .footer__bloc--liste {
     list-style: none;
 }
 .footer__bloc--liste>li {
     padding: .5rem;
+    cursor: pointer;
 }
 
