--- a/style.css
+++ b/style.css
@@ -4,15 +4,16 @@
 /* 
 INDEX 
 
-1 - Header : ..........42
-1.1 - Navbar: .........51
-1.2 - Search: .........104
-1.3 - Filtres: ........174
-2 - Aside: ............234
-3 - Hébergements: .....303
+1 - Header : ..........53
+1.1 - Navbar: .........61
+1.2 - Search: .........118
+1.3 - Filtres: ........198
+2 - Aside: ............260
+3 - Hébergements: .....332
+4 - Activités : .......396
+5 - Footer : ..........441
 
 */
-
 
 
 /* Variables */
@@ -21,7 +22,7 @@ INDEX
     --light-color: #DEEBFF;
     --bg-color: #F2F2F2;
 }
-
+/* Général */
 * {
     margin: 0;
     padding: 0;
@@ -42,7 +43,7 @@ body {
 }
 
 .app-container {
-    max-width: 1200px;
+    max-width: 1400px;
     padding: 1rem .5rem;
     display: flex;
     flex-direction: column;
@@ -255,7 +256,16 @@ body {
     color: var(--primary-color);
     margin: 1rem;
 }
-
+/* Aside + Section hebergement */
+@media (min-width: 769px) {
+    .container_aside-h {
+        display: flex;
+        flex-direction: row-reverse;
+        position: relative;
+        column-gap: 1rem;
+        width: 100%;
+    }
+}
 /* Aside : Les plus populaires */
 .populaire {
     display: flex;
@@ -263,7 +273,18 @@ body {
     background-color: var(--bg-color);
     padding: 2rem 1.5rem;
     row-gap: 1rem;
+    align-self: flex-start;
 }
+@media (min-width: 769px) {
+    .populaire {
+        position: sticky;
+        top: 0;
+        row-gap: 2rem;
+        border-radius: 1rem;
+        width: 50%;
+    }
+}
+
 .populaire__titre {
     display: flex;
     justify-content: space-between;
@@ -277,10 +298,18 @@ body {
     overflow: hidden;
     width: 100%;
     min-width: 215px;
+    max-width: 90%;
     height: 150px;
     padding: .3rem;
+    margin: auto;
     box-shadow: .2rem .2rem .5rem #d6d6d6;
 }
+@media screen (min-width: 769px) {
+    .populaire__card {
+        min-width: 350px;
+    }
+}
+
 .populaire__card--img {
     width: 40%;
 }
@@ -309,7 +338,12 @@ body {
     color: black;
 }
 
-@media (max-width: 380px) {
+@media screen and (max-width: 315px) {
+    .populaire__card--description>p {
+        padding-bottom: 0;
+    }
+}
+@media screen and (min-width: 316px) and (max-width: 380px) {
     .populaire__card--description>p {
         padding-bottom: 1rem;
     }
@@ -330,17 +364,32 @@ body {
 
 /* Section : Hébergements */
 .h {
-    display: flex;
     flex-direction: column;
     padding: 2rem 1.5rem;
     row-gap: 2rem;
 }
+@media (max-width: 768px) {
+    .h {
+        display: flex;
+    }
+}
 
+@media (min-width: 769px) {
+    .h {
+        background-color: var(--bg-color);
+        border-radius: 1rem;
+    }
+}
+.h--titre {
+    font-weight: bold;
+    font-size: 1.7rem;
+    padding: 0 0 1rem 5%;
+}
 .h__cards {
-    display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 1rem;
+    display:flex;
 }
 
 .h__cards__item {
@@ -350,8 +399,7 @@ body {
     background-color: white;
     overflow: hidden;
     width: 100%;
-    max-height: 275px;
-    max-width: 400px;
+    max-width: 90%;
     padding: .3rem;
     box-shadow: .2rem .2rem .5rem #d6d6d6;
 }
@@ -359,14 +407,17 @@ body {
 .h__cards__item--img {
     width: 100%;
     height: 70%;
-    max-height: 125px;
+    max-height: 200px;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    border-radius: 1rem 1rem 0 0;
 }
 
 .h__cards__item--img>img {
     width: 100%;
     height: 100%;
-    border-radius: 1rem 1rem 0 0;
+    
     object-fit: contain;
 }
 
