--- a/style.css
+++ b/style.css
@@ -58,6 +58,15 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (min-width: 767px) {
+    .header {
+        justify-content: flex-start;
+    }
+    .search__box {
+        justify-content: flex-start;
+    }
+}
 /* ## navbar ## */
  .navbar {
      display: flex;
@@ -134,6 +143,7 @@ body {
      display: flex;
      justify-content: center;
      width: 100%;
+     max-width: 360px;
      height: 3rem;
      margin: 1rem 0;
  }
@@ -193,15 +203,28 @@ body {
     .search__box--btn>span {
         display: inline;
     }
+    .search__box--btn {
+        border-radius: 0 1rem 1rem 0;
+    }
 }
 
 /* ## Filtres ## */
-.serach__filters {
+.search__filters {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    
 }
+
+@media screen and (max-width: 885px) {
+    .search__filters {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
 .search__filters>h3 {
     margin: .5rem;
+    
 }
 
 .search__filters__element {
@@ -236,6 +259,7 @@ body {
     display: flex;
     align-items: start;
     justify-content: start;
+    padding: 1rem;
 }
 
 .search__info--icon {
@@ -257,13 +281,14 @@ body {
     margin: 1rem;
 }
 /* Aside + Section hebergement */
-@media (min-width: 769px) {
+@media (min-width: 768px) {
     .container_aside-h {
         display: flex;
         flex-direction: row-reverse;
         position: relative;
         column-gap: 1rem;
         width: 100%;
+        justify-content: center;
     }
 }
 /* Aside : Les plus populaires */
@@ -275,13 +300,13 @@ body {
     row-gap: 1rem;
     align-self: flex-start;
 }
-@media (min-width: 769px) {
+@media (min-width: 768px) {
     .populaire {
         position: sticky;
         top: 0;
         row-gap: 2rem;
         border-radius: 1rem;
-        width: 50%;
+        max-width: 450px;
     }
 }
 
@@ -298,20 +323,22 @@ body {
     overflow: hidden;
     width: 100%;
     min-width: 215px;
-    max-width: 90%;
-    height: 150px;
+    height: 130px;
     padding: .3rem;
     margin: auto;
     box-shadow: .2rem .2rem .5rem #d6d6d6;
 }
-@media screen (min-width: 769px) {
+@media screen and (min-width: 768px) {
     .populaire__card {
         min-width: 350px;
+        height: 180px;
     }
 }
 
 .populaire__card--img {
     width: 40%;
+    display: flex;
+    align-items: center;
 }
 .populaire__card--img>img {
     width: 100%;
@@ -343,10 +370,11 @@ body {
         padding-bottom: 0;
     }
 }
-@media screen and (min-width: 316px) and (max-width: 380px) {
+@media screen and (min-width: 316px) and (max-width: 390px) {
     .populaire__card--description>p {
         padding-bottom: 1rem;
     }
+    
 }
 
 .etoiles {
@@ -368,13 +396,13 @@ body {
     padding: 2rem 1.5rem;
     row-gap: 2rem;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     .h {
         display: flex;
     }
 }
 
-@media (min-width: 769px) {
+@media (min-width: 768px) {
     .h {
         background-color: var(--bg-color);
         border-radius: 1rem;
@@ -399,15 +427,20 @@ body {
     background-color: white;
     overflow: hidden;
     width: 100%;
-    max-width: 90%;
     padding: .3rem;
     box-shadow: .2rem .2rem .5rem #d6d6d6;
+}
+
+@media screen and (min-width: 768px) {
+    .h__cards__item {
+        max-width: 100%;
+    }
 }
 
 .h__cards__item--img {
     width: 100%;
     height: 70%;
-    max-height: 200px;
+    max-height: 170px;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -417,7 +450,6 @@ body {
 .h__cards__item--img>img {
     width: 100%;
     height: 100%;
-    
     object-fit: contain;
 }
 
@@ -464,17 +496,28 @@ body {
     background-color: white;
     overflow: hidden;
     width: 100%;
-    max-height: 275px;
-    max-width: 400px;
-    
+    max-height: 300px;
     box-shadow: .2rem .2rem .5rem #d6d6d6;
 }
-
+@media screen and (min-width: 767px) {
+    .activites__bloc--card {
+        max-width: 45%;
+    }
+    .activites__bloc {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        column-gap: 1rem;
+    }
+}
 .activites__bloc--card--img {
     width: 100%;
     height: 70%;
-    max-height: 125px;
+    max-height: 150px;
     overflow: hidden;
+    display: flex;
+    align-items: center;
 }
 
 .activites__bloc--card--img>img {
@@ -491,10 +534,12 @@ body {
 /* Footer */ 
 .footer {
     background-color: var(--bg-color);
-    padding: 2rem 1rem;
+    padding: 2rem 1.5rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     row-gap: 1.5rem;
+    column-gap: 15%;
 }
 .footer__bloc {
     padding: .5rem;
