--- a/style/hebergement.css
+++ b/style/hebergement.css
@@ -68,6 +68,7 @@
 .populaire__card--description {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 60%;
     height: 100%;
     padding: .25rem 1rem;
@@ -78,27 +79,16 @@
 }
 
 .populaire__card--description>p {
-    padding-bottom: 3rem;
     font-size: .9rem;
     color: black;
-}
-
-@media screen and (max-width: 315px) {
-    .populaire__card--description>p {
-        padding-bottom: 0;
-    }
-}
-@media screen and (min-width: 316px) and (max-width: 390px) {
-    .populaire__card--description>p {
-        padding-bottom: 1rem;
-    }
-    
 }
 
 .etoiles {
     display: flex;
     list-style: none;
     height: 50%;
+    align-items: flex-end;
+    padding-bottom: .25rem;
 }
 
 .fa-star {
