--- a/style/header.css
+++ b/style/header.css
@@ -124,6 +124,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    border: none;
 }
 
 .search__box--btn>span {
@@ -155,15 +156,19 @@
     border: 1px solid #d6d6d6;
     border-radius: 1.5rem;
     margin: .5rem;
+    height: 3rem;
+    position: relative;
 }
 .search__filters__element--icon {
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
+    left: -1px;
     background-color: var(--light-color);
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
 }
 .search__filters__element--icon>.blue {
     color: var(--primary-color);
@@ -171,6 +176,7 @@
 .search__filters__element--item>p {
     margin: .5rem .8rem;
     font-weight: bold;
+    padding-left: 3rem;
 }
 
 .search__info {
