--- a/style/activite.css
+++ b/style/activite.css
@@ -40,6 +40,7 @@
 }
 .activites__bloc--card>h3 {
     margin: 1rem;
+    font-size: .9rem;
     color: black;
 }
 
@@ -75,41 +76,58 @@
     .activites__bloc--card {
         max-width: 100%;
         height: 100%;
+        max-height: 100%;
     }
     .stretch1 {
         grid-column: 1 / 2;
         grid-row: 1 / 3;
+        
+    }
+    .stretch1 > .activites__bloc--card--img {
+        height: 90%;
         max-height: 100%;
     }
     .normal1 {
         grid-column: 2 / 3;
         grid-row: 1 / 2;
+    }
+    .normal1 > .activites__bloc--card--img {
+        height: 80%;
         max-height: 100%;
     }
     .normal2 {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
+    }
+    .normal2 > .activites__bloc--card--img {
+        height: 80%;
         max-height: 100%;
     }
     .stretch2 {
         grid-column: 3 / 4;
         grid-row: 1 / 3;
+    }
+    .stretch2 > .activites__bloc--card--img {
+        height: 90%;
         max-height: 100%;
     }
     .normal3 {
         grid-column: 4 / 5;
         grid-row: 1 / 2;
+    }
+    .normal3 > .activites__bloc--card--img {
+        height: 80%;
         max-height: 100%;
     }
     .normal4 {
         grid-column: 4 / 5;
         grid-row: 2 / 3;
-        max-height: 100%;
     }
-    .activites__bloc--card--img {
+    .normal4 > .activites__bloc--card--img {
         height: 80%;
         max-height: 100%;
     }
+   
     .activites__bloc--card--img>img {
         object-fit: cover;
     }
